@@ -93,10 +93,12 @@
    Also note that this mode should be used if one
    expects to record SysEx events, which have no channel.
 
-\subsubsection{Route-By-Buss}
+\subsubsection{Route-Input-By-Buss}
 \label{subsubsec:recording_route_by_buss}
 
-   Route-by-buss is enabled whenever a pattern in a song specifies an
+   \index{record!by buss)
+   Route-input-by-buss (also known as record-by-buss)
+   is enabled whenever a pattern in a song specifies an
    input buss \textsl{and}
    \textbf{Edit / Preferences / MIDI Input / Record into patterns by
    bus} is checked. It is an 'rc' file option.
